<resources>
    <string name="google_maps_key">AIzaSyD5xNfhXBRMqlfzOYQC6_NgitCm6fa-gNo</string>

    <string name="app_name">Tag df</string>
    <string name="menu_diary">Agenda</string>
    <string name="menu_guests">Invitados</string>
    <string name="menu_map">Mapa</string>
    <string name="menu_about">Acerca de</string>

    <string name="tab_date_one">30/Jun</string>
    <string name="tab_date_two">01/Jul</string>
    <string name="tab_date_three">02/Jul</string>
    <string name="ok">Aceptar</string>
    <string name="message_selected_session">Sesión Seleccionada</string>
    <string name="dev_f">Dev.F</string>
    <string name="email_dev_f">hola@devf.mx</string>
    <string name="hint_search_conference">Buscar por Conferencia</string>
    <string name="hint_search_category">Buscar por Categoria</string>
    <string name="cancel">Cancelar</string>

    <string name="name_guest_1">ELISABETH MOSS</string>
    <string name="name_guest_2">MATTHEW WEINER</string>
    <string name="name_guest_3">JOHN SLATTERY</string>
    <string name="name_guest_4">>SPIKE JONZE</string>


</resources>
