<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/item_nav_explore"
            android:icon="@drawable/ic_explore_black_24dp"
            android:title="@string/menu_diary" />
        <item
            android:id="@+id/item_nav_people"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_guests" />
        <item
            android:id="@+id/item_nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/item_nav_info"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/menu_about" />
    </group>
</menu>